--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 			<version>7.15.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.puppycrawl.tools/checkstyle -->
+		<dependency>
+			<groupId>com.puppycrawl.tools</groupId>
+			<artifactId>checkstyle</artifactId>
+			<version>10.12.7</version>
+		</dependency>
+
 
 	</dependencies>
 
